First try geo mapping

--- a/bina_dataimport.ipynb
+++ b/bina_dataimport.ipynb
@@ -26,6 +26,15 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Import Modules\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "outputs": [],
    "source": [
@@ -38,23 +47,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-01T08:17:28.970105Z",
-     "start_time": "2024-04-01T08:17:28.967868Z"
+     "end_time": "2024-04-14T10:47:55.551521Z",
+     "start_time": "2024-04-14T10:47:55.309082Z"
     }
    },
-   "execution_count": 64
+   "execution_count": 1
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Angegebene Database wurde nicht gefunden\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# creating file (path) name\n",
     "dbfile = './DATA/BINA_DATA.db' \n",
@@ -76,15 +77,27 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-01T08:17:28.973634Z",
-     "start_time": "2024-04-01T08:17:28.971198Z"
+     "end_time": "2024-04-13T16:45:25.723822Z",
+     "start_time": "2024-04-13T16:45:25.721803Z"
     }
    },
-   "execution_count": 65
+   "execution_count": 2
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "OperationalError",
+     "evalue": "table city already exists",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mOperationalError\u001B[0m                          Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[3], line 13\u001B[0m\n\u001B[1;32m      2\u001B[0m sql \u001B[38;5;241m=\u001B[39m [\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mCREATE TABLE city (id INTEGER PRIMARY KEY, plz string, cityName string, bfsID string, lawCityName string)\u001B[39m\u001B[38;5;124m\"\u001B[39m,\n\u001B[1;32m      3\u001B[0m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mCREATE TABLE smartmeter (id INTEGER PRIMARY KEY, plz REFERENCES city(plz) ON UPDATE CASCADE, timestamp string, anzMeter int,valueKwh float)\u001B[39m\u001B[38;5;124m\"\u001B[39m,\n\u001B[1;32m      4\u001B[0m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mCREATE TABLE solarPlants (id INTEGER PRIMARY KEY, xtfID string, plz string, totalPower float, mainCategory string, subCategory string, plantCategory string,  _x int,  _y int, FOREIGN KEY (plz) REFERENCES city(plz) ON UPDATE CASCADE, FOREIGN KEY (subCategory) REFERENCES subCategory(id) ON UPDATE CASCADE, FOREIGN KEY (mainCategory) REFERENCES mainCategory(id) ON UPDATE CASCADE, FOREIGN KEY (plantCategory) REFERENCES plantCategory(id) ON UPDATE CASCADE)\u001B[39m\u001B[38;5;124m\"\u001B[39m,\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m      9\u001B[0m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mCREATE TABLE unit (id string,  mes string)\u001B[39m\u001B[38;5;124m\"\u001B[39m,\n\u001B[1;32m     10\u001B[0m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mCREATE TABLE demoValue (id INTEGER PRIMARY KEY, bfsID string, period string, indicator string, unit string, value float, FOREIGN KEY (bfsID) REFERENCES plz(bfsID) ON UPDATE CASCADE, FOREIGN KEY (indicator) REFERENCES indicator (id) ON UPDATE CASCADE, FOREIGN KEY (unit) REFERENCES unit(id) ON UPDATE CASCADE)\u001B[39m\u001B[38;5;124m\"\u001B[39m]\n\u001B[1;32m     12\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m code \u001B[38;5;129;01min\u001B[39;00m sql:\n\u001B[0;32m---> 13\u001B[0m     \u001B[43mcursor\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mexecute\u001B[49m\u001B[43m(\u001B[49m\u001B[43mcode\u001B[49m\u001B[43m)\u001B[49m\n",
+      "\u001B[0;31mOperationalError\u001B[0m: table city already exists"
+     ]
+    }
+   ],
    "source": [
     "# Tabelle erstellen\n",
     "sql = [\"CREATE TABLE city (id INTEGER PRIMARY KEY, plz string, cityName string, bfsID string, lawCityName string)\",\n",
@@ -104,11 +117,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-01T08:17:28.982511Z",
-     "start_time": "2024-04-01T08:17:28.974557Z"
+     "end_time": "2024-04-13T16:45:25.807808Z",
+     "start_time": "2024-04-13T16:45:25.724352Z"
     }
    },
-   "execution_count": 66
+   "execution_count": 3
   },
   {
    "cell_type": "code",
@@ -122,20 +135,17 @@
     "        \"CREATE VIEW areaAgricultural AS SELECT id, bfsID, period, value FROM demoValue WHERE demoValue.indicator == 'Ind_04_04';\",\n",
     "        \"CREATE VIEW areaUnproductive AS SELECT id, bfsID, period, value FROM demoValue WHERE demoValue.indicator == 'Ind_04_07';\",\n",
     "        \"CREATE VIEW keyFiguresPopulation as SELECT p.bfsID, p.period, p.value as population, pd.value as populationDensity FROM population p LEFT JOIN population_density pd ON p.bfsID = pd.bfsID AND p.period = pd.period;\",\n",
-    "        \"CREATE VIEW keyFiguresArea as SELECT a.bfsID, a.period as periodTotal, a.value as total,ase.period as periodSettlement, ase.value as settlement, aa.period as periodAgricultural, aa.value as agricultural, au.period as periodUnproductive, au.value as unproductive FROM areaTotal a LEFT JOIN areaSettlement ase ON a.bfsID = ase.bfsID LEFT JOIN areaAgricultural aa ON a.bfsID = aa.bfsID LEFT JOIN areaUnproductive au ON a.bfsID = au.bfsID;\"\n",
+    "        \"CREATE VIEW keyFiguresArea as SELECT a.bfsID, a.period as periodTotal, a.value as total,ase.period as periodSettlement, ase.value as settlement, aa.period as periodAgricultural, aa.value as agricultural, au.period as periodUnproductive, au.value as unproductive FROM areaTotal a LEFT JOIN areaSettlement ase ON a.bfsID = ase.bfsID LEFT JOIN areaAgricultural aa ON a.bfsID = aa.bfsID LEFT JOIN areaUnproductive au ON a.bfsID = au.bfsID;\",\n",
+    "        \"CREATE VIEW sumSmartmeter as SELECT s.plz as plz, bfsID, SUM(valueKwh) as 'kWh' FROM smartmeter as s LEFT JOIN (SELECT plz, bfsID FROM city GROUP BY plz) as c ON s.plz = c.plz GROUP BY bfsID;\"\n",
     "       ]\n",
     "\n",
     "for code in sql:\n",
     "    cursor.execute(code)"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-04-01T08:17:28.987178Z",
-     "start_time": "2024-04-01T08:17:28.983305Z"
-    }
+    "collapsed": false
    },
-   "execution_count": 67
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -152,13 +162,9 @@
     "connection.commit()"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-04-01T08:17:29.532511Z",
-     "start_time": "2024-04-01T08:17:28.988053Z"
-    }
+    "collapsed": false
    },
-   "execution_count": 68
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -180,13 +186,16 @@
     "connection.commit()"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-04-01T08:17:29.537001Z",
-     "start_time": "2024-04-01T08:17:29.533335Z"
-    }
+    "collapsed": false
    },
-   "execution_count": 69
+   "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -208,13 +217,9 @@
     "connection.commit()"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-04-01T08:17:29.540734Z",
-     "start_time": "2024-04-01T08:17:29.537566Z"
-    }
+    "collapsed": false
    },
-   "execution_count": 70
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -236,13 +241,9 @@
     "connection.commit()"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-04-01T08:17:29.545392Z",
-     "start_time": "2024-04-01T08:17:29.541850Z"
-    }
+    "collapsed": false
    },
-   "execution_count": 71
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -270,13 +271,9 @@
     "connection.commit()"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-04-01T08:17:34.220956Z",
-     "start_time": "2024-04-01T08:17:29.545820Z"
-    }
+    "collapsed": false
    },
-   "execution_count": 72
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -295,13 +292,9 @@
     "connection.commit()"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-04-01T08:17:34.234618Z",
-     "start_time": "2024-04-01T08:17:34.221622Z"
-    }
+    "collapsed": false
    },
-   "execution_count": 73
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -320,13 +313,9 @@
     "connection.commit()"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-04-01T08:17:34.238316Z",
-     "start_time": "2024-04-01T08:17:34.235212Z"
-    }
+    "collapsed": false
    },
-   "execution_count": 74
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -354,13 +343,9 @@
     "connection.commit()"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-04-01T08:17:35.901579Z",
-     "start_time": "2024-04-01T08:17:34.238866Z"
-    }
+    "collapsed": false
    },
-   "execution_count": 75
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -381,13 +366,9 @@
     "connection.commit()\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-04-01T08:21:13.400228Z",
-     "start_time": "2024-04-01T08:17:35.902271Z"
-    }
+    "collapsed": false
    },
-   "execution_count": 76
+   "execution_count": null
   }
  ]
 }
