Added Kantonskürzel in Table City

--- a/bina_dataimport.ipynb
+++ b/bina_dataimport.ipynb
@@ -100,7 +100,7 @@
    ],
    "source": [
     "# Tabelle erstellen\n",
-    "sql = [\"CREATE TABLE city (id INTEGER PRIMARY KEY, plz string, cityName string, bfsID string, lawCityName string)\",\n",
+    "sql = [\"CREATE TABLE city (id INTEGER PRIMARY KEY, plz string, cityName string, bfsID string, lawCityName string, kantonkuerzel string)\",\n",
     "\"CREATE TABLE smartmeter (id INTEGER PRIMARY KEY, plz REFERENCES city(plz) ON UPDATE CASCADE, timestamp string, anzMeter int,valueKwh float)\",\n",
     "\"CREATE TABLE solarPlants (id INTEGER PRIMARY KEY, xtfID string, plz string, totalPower float, mainCategory string, subCategory string, plantCategory string,  _x int,  _y int, FOREIGN KEY (plz) REFERENCES city(plz) ON UPDATE CASCADE, FOREIGN KEY (subCategory) REFERENCES subCategory(id) ON UPDATE CASCADE, FOREIGN KEY (mainCategory) REFERENCES mainCategory(id) ON UPDATE CASCADE, FOREIGN KEY (plantCategory) REFERENCES plantCategory(id) ON UPDATE CASCADE)\",\n",
     "\"CREATE TABLE mainCategory (id string PRIMARY KEY, de string, fr string, it string, en string)\",\n",
@@ -156,7 +156,8 @@
     "for index, row in city.iterrows():\n",
     "    ort = '\"' + row[\"Ortschaftsname\"] + '\"'\n",
     "    lawCityName = '\"' + row[\"Gemeindename\"] + '\"'\n",
-    "    sql = \"INSERT INTO city VALUES(NULL,{},{},{},{})\".format(row[\"PLZ\"], ort, row[\"BFS-Nr\"], lawCityName)\n",
+    "    kantonkuerzel = '\"' + row[\"Kantonskürzel\"] + '\"'\n",
+    "    sql = \"INSERT INTO city VALUES(NULL,{},{},{},{},{})\".format(row[\"PLZ\"], ort, row[\"BFS-Nr\"], lawCityName, kantonkuerzel)\n",
     "    cursor.execute(sql)\n",
     "\n",
     "connection.commit()"
