Adding plz bfs mapping

--- a/bina_dataimport.ipynb
+++ b/bina_dataimport.ipynb
@@ -40,7 +40,6 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "#Import Modules\n",
     "import os, sqlite3\n",
@@ -52,23 +51,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-23T21:41:40.667077Z",
-     "start_time": "2024-04-23T21:41:40.664989Z"
+     "end_time": "2024-05-09T14:22:37.459625Z",
+     "start_time": "2024-05-09T14:22:37.456048Z"
     }
    },
-   "execution_count": 19
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Angegebene Database wurde nicht gefunden\n"
-     ]
-    }
-   ],
    "source": [
     "# creating file (path) name\n",
     "dbfile = './DATA/BINA_DATA.db' \n",
@@ -90,15 +81,23 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-23T21:41:40.692504Z",
-     "start_time": "2024-04-23T21:41:40.683005Z"
+     "end_time": "2024-05-09T14:22:47.086773Z",
+     "start_time": "2024-05-09T14:22:47.083795Z"
     }
    },
-   "execution_count": 20
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Angegebene Database wurde nicht gefunden\n"
+     ]
+    }
+   ],
+   "execution_count": 2
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "# Tabelle erstellen\n",
     "sql = [\"CREATE TABLE city (id INTEGER PRIMARY KEY, plz string, cityName string, bfsID string, lawCityName string, kantonkuerzel string)\",\n",
@@ -113,7 +112,8 @@
     "\"CREATE TABLE meteoParameter (parameterID string PRIMARY KEY , measure string, description string)\",\n",
     "\"CREATE TABLE meteoStations (stn string PRIMARY KEY, stnName string, lawCityName string,  datasource string, bfsID string, coEast string, coNorth string, coLength string, coWide string, FOREIGN KEY (lawCityName) REFERENCES city (lawCityName) ON UPDATE CASCADE, FOREIGN KEY (bfsID) REFERENCES city (bfsID) ON UPDATE CASCADE)\",\n",
     "\"CREATE TABLE meteoData (id INTEGER PRIMARY KEY, meteoStation string, meteoParameter string, dataTime string, value float, FOREIGN KEY (meteoStation) REFERENCES meteoStations (stn) ON UPDATE CASCADE, FOREIGN KEY (meteoParameter) REFERENCES meteoParameter (parameterID) ON UPDATE CASCADE)\",\n",
-    "\"CREATE TABLE meteoParamBfs (id INTEGER PRIMARY KEY, bfsID string, meteoParameter string, meteoStation string, FOREIGN KEY (bfsID) REFERENCES city (bfsID) ON UPDATE CASCADE, FOREIGN KEY (meteoParameter) References meteoParameter (parameterID) ON UPDATE CASCADE, FOREIGN KEY (meteoStation) REFERENCES meteoStations (stn) ON UPDATE CASCADE)\"]\n",
+    "\"CREATE TABLE meteoParamBfs (id INTEGER PRIMARY KEY, bfsID string, meteoParameter string, meteoStation string, FOREIGN KEY (bfsID) REFERENCES city (bfsID) ON UPDATE CASCADE, FOREIGN KEY (meteoParameter) References meteoParameter (parameterID) ON UPDATE CASCADE, FOREIGN KEY (meteoStation) REFERENCES meteoStations (stn) ON UPDATE CASCADE)\",\n",
+    "\"CREATE TABLE plzBfsMapping (id INTEGER PRIMARY KEY, plz string, bfsID string, cityName string, lawCityName string)\"]\n",
     "\n",
     "for code in sql:\n",
     "    cursor.execute(code)\n",
@@ -122,15 +122,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-23T21:41:40.700412Z",
-     "start_time": "2024-04-23T21:41:40.693466Z"
+     "end_time": "2024-05-09T14:22:49.291438Z",
+     "start_time": "2024-05-09T14:22:49.282082Z"
     }
    },
-   "execution_count": 21
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "# Views erstellen\n",
     "sql = [ \"CREATE VIEW population AS SELECT id, bfsID, period, value FROM demoValue WHERE demoValue.indicator == 'Ind_01_01';\",\n",
@@ -150,15 +150,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-23T21:41:40.705451Z",
-     "start_time": "2024-04-23T21:41:40.701304Z"
+     "end_time": "2024-05-09T14:22:58.045979Z",
+     "start_time": "2024-05-09T14:22:58.038889Z"
     }
    },
-   "execution_count": 22
+   "outputs": [],
+   "execution_count": 4
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "# City Daten einlesen als Dataframe und in DB sichern\n",
     "city = pd.read_csv(\"./DATA/city_directory/AMTOVZ_CSV_LV95.csv\", delimiter=\";\")\n",
@@ -178,15 +178,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-23T21:41:40.849283Z",
-     "start_time": "2024-04-23T21:41:40.706283Z"
+     "end_time": "2024-05-09T14:23:02.811167Z",
+     "start_time": "2024-05-09T14:23:02.681834Z"
     }
    },
-   "execution_count": 23
+   "outputs": [],
+   "execution_count": 5
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "# Solar Anlagen Daten einlesen als Dataframe und in DB sichern\n",
     "plantCategory = pd.read_csv(\"./DATA/solar_powerplants/PlantCategoryCatalogue.csv\", delimiter=\",\")\n",
@@ -206,11 +206,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-23T21:41:40.855025Z",
-     "start_time": "2024-04-23T21:41:40.850069Z"
+     "end_time": "2024-05-09T14:23:05.245066Z",
+     "start_time": "2024-05-09T14:23:05.237845Z"
     }
    },
-   "execution_count": 24
+   "outputs": [],
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -221,7 +222,6 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "# Importieren der Hauptkategorien\n",
     "mainCategory = pd.read_csv(\"./DATA/solar_powerplants/MainCategoryCatalogue.csv\", delimiter=\",\")\n",
@@ -241,15 +241,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-23T21:41:40.859982Z",
-     "start_time": "2024-04-23T21:41:40.856207Z"
+     "end_time": "2024-05-09T14:23:07.111131Z",
+     "start_time": "2024-05-09T14:23:07.104856Z"
     }
    },
-   "execution_count": 25
+   "outputs": [],
+   "execution_count": 7
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "# Importieren der Unterkategorien\n",
     "subCategory = pd.read_csv(\"./DATA/solar_powerplants/SubCategoryCatalogue.csv\", delimiter=\",\")\n",
@@ -269,15 +269,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-23T21:41:40.864593Z",
-     "start_time": "2024-04-23T21:41:40.860559Z"
+     "end_time": "2024-05-09T14:23:08.291276Z",
+     "start_time": "2024-05-09T14:23:08.285154Z"
     }
    },
-   "execution_count": 26
+   "outputs": [],
+   "execution_count": 8
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "# Importieren der Solar Kraftanlagen\n",
     "electricityProductionPlant = pd.read_csv(\"./DATA/solar_powerplants/ElectricityProductionPlant.csv\", delimiter=\",\")\n",
@@ -303,15 +303,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-23T21:41:46.404117Z",
-     "start_time": "2024-04-23T21:41:40.865224Z"
+     "end_time": "2024-05-09T14:23:14.408630Z",
+     "start_time": "2024-05-09T14:23:09.767135Z"
     }
    },
-   "execution_count": 27
+   "outputs": [],
+   "execution_count": 9
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "#Importieren Demografie Daten Indikator\n",
     "demoIndicator = pd.read_csv(\"./DATA/key_figures_communities/Indicator_DemoData.csv\", delimiter=\";\")\n",
@@ -328,15 +328,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-23T21:41:46.415923Z",
-     "start_time": "2024-04-23T21:41:46.404850Z"
+     "end_time": "2024-05-09T14:23:15.218960Z",
+     "start_time": "2024-05-09T14:23:15.199330Z"
     }
    },
-   "execution_count": 28
+   "outputs": [],
+   "execution_count": 10
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "#Importieren Unit Messeinheit\n",
     "unitMeas = pd.read_csv(\"./DATA/key_figures_communities/unit_mes_DemoData.csv\", delimiter=\";\")\n",
@@ -353,15 +353,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-23T21:41:46.419996Z",
-     "start_time": "2024-04-23T21:41:46.416646Z"
+     "end_time": "2024-05-09T14:23:16.807262Z",
+     "start_time": "2024-05-09T14:23:16.801871Z"
     }
    },
-   "execution_count": 29
+   "outputs": [],
+   "execution_count": 11
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "#Importieren demoValue\n",
     "demoValue = pd.read_csv(\"./DATA/key_figures_communities/ts-x-21.03.01.csv\", delimiter=\";\", dtype={'PERIOD_REF': str, 'PERIOD_COMP': str, 'REGION': str})\n",
@@ -387,15 +387,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-23T21:41:48.420838Z",
-     "start_time": "2024-04-23T21:41:46.420559Z"
+     "end_time": "2024-05-09T14:23:20.099234Z",
+     "start_time": "2024-05-09T14:23:18.414018Z"
     }
    },
-   "execution_count": 30
+   "outputs": [],
+   "execution_count": 12
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "# Importieren SmartMeter DATA\n",
     "path = './DATA/smartmeter'\n",
@@ -414,23 +414,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-23T21:46:14.272077Z",
-     "start_time": "2024-04-23T21:41:48.422679Z"
+     "end_time": "2024-05-09T14:26:58.061070Z",
+     "start_time": "2024-05-09T14:23:21.240439Z"
     }
    },
-   "execution_count": 31
+   "outputs": [],
+   "execution_count": 13
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'str'>\n"
-     ]
-    }
-   ],
    "source": [
     "#Test Date Time and manipulation\n",
     "\n",
@@ -453,15 +445,27 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-23T21:46:14.274693Z",
-     "start_time": "2024-04-23T21:46:14.272926Z"
+     "end_time": "2024-05-09T14:26:58.187142Z",
+     "start_time": "2024-05-09T14:26:58.062685Z"
     }
    },
-   "execution_count": 32
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'date' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[14], line 17\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;66;03m#Test Date Time and manipulation\u001B[39;00m\n\u001B[1;32m      2\u001B[0m \n\u001B[1;32m      3\u001B[0m \u001B[38;5;66;03m#input = '202001240000'\u001B[39;00m\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m     14\u001B[0m \n\u001B[1;32m     15\u001B[0m \u001B[38;5;66;03m#print(df)\u001B[39;00m\n\u001B[0;32m---> 17\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;28mtype\u001B[39m(\u001B[43mdate\u001B[49m))\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'date' is not defined"
+     ]
+    }
+   ],
+   "execution_count": 14
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "#Import Meteo Parameter\n",
     "meteoParameter = pd.read_csv(\"./DATA/meteo/parameter.csv\", delimiter=\";\")\n",
@@ -478,17 +482,13 @@
     "connection.commit()"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-04-23T21:46:14.442577Z",
-     "start_time": "2024-04-23T21:46:14.275288Z"
-    }
+    "collapsed": false
    },
-   "execution_count": 33
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "#Import Meteo Stations\n",
     "meteoStations = pd.read_csv(\"./DATA/meteo/meteoStation.csv\", delimiter=\";\")\n",
@@ -507,17 +507,13 @@
     "connection.commit()"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-04-23T21:46:14.451112Z",
-     "start_time": "2024-04-23T21:46:14.443420Z"
-    }
+    "collapsed": false
    },
-   "execution_count": 34
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "#Import MeteoData of parameter rre150h0\n",
     "#Files bereinigen mit den ersten zwei Zeilen jeder Datei überspringen\n",
@@ -544,17 +540,13 @@
     "connection.commit()"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-04-23T21:56:42.360994Z",
-     "start_time": "2024-04-23T21:55:57.627077Z"
-    }
+    "collapsed": false
    },
-   "execution_count": 40
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "#Import MeteoData of parameter tre200h0\n",
     "path = './DATA/meteo/data'\n",
@@ -580,17 +572,13 @@
     "connection.commit()"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-04-23T21:57:03.847327Z",
-     "start_time": "2024-04-23T21:56:55.908893Z"
-    }
+    "collapsed": false
    },
-   "execution_count": 41
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "#Import MeteoData of parameter sre000h0\n",
     "path = './DATA/meteo/data'\n",
@@ -616,13 +604,47 @@
     "connection.commit()"
    ],
    "metadata": {
-    "collapsed": false,
+    "collapsed": false
+   },
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-23T21:57:08.345915Z",
-     "start_time": "2024-04-23T21:57:05.936954Z"
+     "end_time": "2024-05-09T14:50:39.943219Z",
+     "start_time": "2024-05-09T14:50:39.929246Z"
     }
    },
-   "execution_count": 42
+   "cell_type": "code",
+   "source": [
+    "mapping = pd.read_csv(\"./DATA/city_directory/mapping_plz_bfsid_lu.csv\", delimiter=\",\")\n",
+    "\n",
+    "for index, row in mapping.iterrows():\n",
+    "    cityName = '\"' + row[\"cityName\"] + '\"'\n",
+    "    lawCityName = '\"' + row[\"lawCityName\"] + '\"'\n",
+    "    \n",
+    "    sql = \"INSERT INTO plzBfsMapping VALUES(NULL,{},{},{},{})\".format(row[\"plz\"], row[\"bfsId\"], cityName, lawCityName)\n",
+    "    cursor.execute(sql)\n",
+    "\n",
+    "connection.commit()"
+   ],
+   "outputs": [],
+   "execution_count": 19
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": ""
   }
  ]
 }
