--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -581,7 +581,9 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "SMARTMETER DATA",
+   "source": [
+    "SMARTMETER DATA"
+   ],
    "id": "e5e6d9366da97c03"
   },
   {
@@ -887,7 +889,7 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
+   "source": [],
    "id": "d891ce9f68a3bdc9"
   }
  ],
